# JayNotes

./: .gitignore  CLAUDE.md  PLAN.md  README.md  ideas.md  package-lock.json  package.json  vite.config.js
docs/: encryption-security-analysis.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  index.rs  lib.rs  main.rs  pdf.rs  transfer.rs  vault.rs  vaults.rs  watcher.rs
src-tauri/src/ai/: client.rs  revisions.rs  settings.rs  tools.rs
src-tauri/src/providers/: crypto.rs  mod.rs  plain.rs  unlock.rs
src-tauri/src/providers/encrypted_db/: container.rs  merge.rs  mod.rs
src-tauri/src/providers/encrypted_files/: cipher.rs  mod.rs  tests.rs
src-tauri/src/providers/tinylord/: client.rs  mod.rs  tests.rs
src/lib/components/: ChatSidebar.svelte  ContextMenu.svelte  Editor.svelte  EditorPane.svelte  FileTree.svelte  PropertiesBar.svelte  QuickSwitcher.svelte  RecentList.svelte  SearchPanel.svelte  SettingsMenu.svelte  Sidebar.svelte  TagsPanel.svelte  VaultSwitcher.svelte
src/lib/components/chat/: AiSettingsPanel.svelte  MarkdownView.svelte  PermissionCard.svelte  ThinkingBlock.svelte  ToolChip.svelte
src/lib/stores/: chat.ts  chatReducer.test.ts  chatReducer.ts  editorBridge.ts  indexEvents.ts  search.ts  theme.ts  ui.ts  vault.ts
src/lib/styles/: editor.css
src/lib/utils/: frontmatter.test.ts  frontmatter.ts  fuzzy.test.ts  fuzzy.ts  markdown.test.ts  markdown.ts  metadata.test.ts  metadata.ts  path.test.ts  path.ts  time.test.ts  time.ts  url.test.ts  url.ts
src/routes/: +layout.svelte  +page.svelte
