[package]
name = "jaynotes"
version = "0.1.0"
description = "JayNotes - a simple Obsidian-style markdown notes app"
authors = ["Jason Tudisco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jaynotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
trash = "5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
notify-debouncer-full = "0.7.0"
serde_yaml = "0.9.34"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "http2"] }
tokio = { version = "1", features = ["sync", "time"] }
comrak = { version = "0.53", default-features = false }
typst = "0.15"
typst-layout = "0.15"
typst-pdf = "0.15"
typst-assets = { version = "0.15", features = ["fonts"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
base64 = "0.22"
pdf-extract = "0.9"

