[package]
name = "jaynotes"
version = "0.3.0"
description = "JayNotes - a simple Obsidian-style markdown notes app"
authors = ["Jason Tudisco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jaynotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Personal builds ship every provider; a public build compiles unwanted
# providers OUT with `--no-default-features` plus an explicit list. The frontend
# hardcodes nothing (see `list_providers`), so an omitted provider leaves zero
# UI trace and a saved vault of that kind shows "unsupported in this build".
default = ["provider-encrypted-db", "provider-encrypted-files", "provider-tinylord"]
# Internal umbrella pulled in by every encrypted provider: the shared KDF,
# unlock-session, and OS-keyring plumbing (compiled only when something needs it).
encryption = ["dep:keyring", "dep:scrypt", "dep:zeroize"]
provider-encrypted-db = ["encryption"]
# M15: Syncthing-friendly file-per-note encryption via the local rclone-crypt
# library (rclone-compatible names + content). Pulls in the encryption umbrella
# and the path-dependency library.
provider-encrypted-files = ["encryption", "dep:rclone-crypt"]
# M16: TinyLord hosted vault (per-instance URL + login). Server is source of
# truth; a local FTS index mirror is kept live over SSE. Deliberately does NOT
# pull the `encryption` umbrella — its "remember" path stores the login password
# in the OS keyring (tokens expire/rotate), so it only needs `keyring` + `zeroize`
# for in-memory password hygiene, plus a tokio runtime able to run the reqwest
# reactor and the background SSE tasks. `reqwest` (rustls+json+stream+http2) is
# already an unconditional dependency of the crate, so nothing HTTP is gated here.
provider-tinylord = [
    "dep:keyring",
    "dep:zeroize",
    "tokio/rt-multi-thread",
    "tokio/net",
]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
trash = "5"
# SQLCipher build of SQLite (PRAGMA key). This changes the SQLite used by the
# EXISTING plain index too; SQLCipher opens unkeyed DBs as ordinary SQLite, so
# plain-vault indexes are unaffected. Vendored OpenSSL avoids a system dep.
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
# Shared encryption plumbing (gated behind any encrypted provider).
keyring = { version = "3", optional = true }
scrypt = { version = "0.11", optional = true }
zeroize = { version = "1", optional = true }
# M15 encrypted-files: the user's rclone-compatible crypt library (path dep;
# absolute path is acceptable for this personal build). Optional — pulled in only
# by the provider-encrypted-files feature.
rclone-crypt = { path = "/Volumes/WorkDrive/Hot/Jason3/RcloneCryptRustLib/crates/rclone-crypt", optional = true }
notify-debouncer-full = "0.7.0"
serde_yaml = "0.9.34"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "http2"] }
tokio = { version = "1", features = ["sync", "time", "macros", "io-util"] }
comrak = { version = "0.53", default-features = false }
typst = "0.15"
typst-layout = "0.15"
typst-pdf = "0.15"
typst-assets = { version = "0.15", features = ["fonts"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
base64 = "0.22"
pdf-extract = "0.9"

